# aoc-2020

./: .clang-format  .gitignore  CMakeLists.txt
include/: aoc_util.h
src/: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  aoc_util.cpp
